--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.12"
     }
 }
 
@@ -34,7 +34,7 @@ subprojects {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 
-    def grpcVersion = '1.19.0'
+    def grpcVersion = '1.28.1'
 
     protobuf {
         protoc {
@@ -181,11 +181,12 @@ subprojects {
     }
 
     dependencies {
+        implementation 'com.google.protobuf:protobuf-lite:3.0.1'
         implementation "io.grpc:grpc-okhttp:${grpcVersion}"
         implementation "io.grpc:grpc-protobuf-lite:${grpcVersion}"
         implementation "io.grpc:grpc-stub:${grpcVersion}"
         implementation 'org.slf4j:slf4j-api:1.7.25'
-        api 'com.google.protobuf:protobuf-lite:3.0.1'
+
         api 'io.reactivex.rxjava2:rxjava:2.1.7'
 
         compileOnly "javax.annotation:javax.annotation-api:1.3.2"
